# Torus-PoS-UTXO

./: .claude-state.json  .gitignore  Dockerfile  README.md  torus.pro
.github/workflows/: release.yml  torusd.yml
contrib/docker-compose/: docker-compose.yml
contrib/seeder/: bitcoin.cpp  dnsseed  main.cpp  serialize.h  strlcpy.h
doc/: docker-setup.md  release-notes.md
scripts/: convert_utxo_snapshot.py
src/: addrman.h  bitcoinrpc.cpp  bitcoinrpc.h  checkpoints.cpp  crypter.cpp  crypter.h  genesis_utxos.h  init.cpp  kernel.cpp  kernel.h  key.cpp  main.cpp  main.h  makefile.unix  net.cpp  net.h  netbase.cpp  netbase.h  rpcblockchain.cpp  rpcmining.cpp  rpcnet.cpp  rpcwallet.cpp  script.cpp  script.h  strlcpy.h  torcontrol.cpp  torcontrol.h  util.cpp  version.h  wallet.cpp  wallet.h  walletdb.cpp
src/crypto/: sha3.h
src/qt/: bitcoingui.cpp  bitcoingui.h  clientmodel.cpp  notificator.cpp  overviewpage.cpp  overviewpage.h  sendcoinsdialog.cpp  sendcoinsdialog.h  sendcoinsentry.cpp  stakepage.cpp  stakepage.h  transactionrecord.cpp  transactionrecord.h  transactiontablemodel.cpp  walletmodel.cpp  walletmodel.h
src/test/: covenant_tests.cpp
zk-bridge/: .env.example  .gitignore  Cargo.toml  gpu-prove.sh  groth16_onchain_proof.hex  groth16_proof.json
zk-bridge/contracts/: DEPLOYMENTS.md  WrappedTRS.sol  foundry.toml
zk-bridge/relayer/: .env.example  Cargo.toml
zk-bridge/relayer/src/: api.rs  covenant_tx.rs  lib.rs  main.rs  prover.rs  state.rs  submitter.rs  torus_rpc.rs  watcher.rs
zk-bridge/relayer/tests/: withdrawal_test.rs
(+20 files in other folders)
